style.css
*,
::before,
::after {
  box-sizing: border-box;
  margin: 0;
}

html,
body {
  max-width: 100%;
}

body {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
}

.text--center {
  text-align: center;
}

.text--light {
  color: #fff;
}

.text--dark {
  color: #333;
}

.site__header {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  padding: 2em 1.5em;
  display: flex;
  flex-wrap: wrap;
  flex-direction: column;
  z-index: 9999;
}

.site__logo__container {
  flex: 0 0 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.site__logo {
  flex: 1 0 75%;
  max-width: 160px;
}

.site__nav--toggle {
  cursor: pointer;
}

.site__nav {
  flex: 1 0 100%;
  max-width: 100%;
  display: none;
  flex-wrap: wrap;
  align-items: center;
}

.site__nav > ul {
  list-style-type: none;
  padding-left: 0;
}

.site__nav__item + .site__nav__item {
  margin-top: 1em;
}

.site__nav__link {
  text-decoration: none;
  text-transform: uppercase;
  font-size: 1.5em;
  font-weight: 100;
}

.hero {
  max-width: 100%;
  min-height: 100vh;
  background-image: url("./images/mobile/image-hero.jpg");
  background-size: cover;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 0 1.5em;
  filter: brightness(0.8);
}

.heading {
  font-size: 2.5em;
  font-weight: 100;
  line-height: 1;
  text-transform: uppercase;
}

.hero__caption {
  flex: 1 0 100%;
  max-width: 100%;
  border: 2px solid currentColor;
  padding: 0.6em;
}

.interactive__vr {
  display: flex;
  flex-wrap: wrap;
  margin: 6em 0;
  padding: 0 1.5em;
}

.interactive__vr__img {
  flex: 1 0 100%;
  max-width: 100%;
}

.interactive__vr__body {
  flex: 1 0 100%;
  max-width: 100%;
  margin: 3em 0 0;
}

.interactive__vr__heading {
  margin-bottom: 1.5rem;
}

.interactive__vr__text {
  color: hsl(0, 0%, 50%);
  line-height: 1.5;
}

.creations {
  padding: 0 1.5em;
}

.creations__heading {
  margin-bottom: 3rem;
}

.creation {
  position: relative;
  margin: 0 auto;
}

.creation + .creation {
  margin-top: 1.5em;
}

.creation__heading {
  font-size: 1.5em;
  font-weight: 100;
  text-transform: capitalize;
  position: absolute;
  bottom: 0.8em;
  left: 0.8em;
  z-index: +1;
}

.creation__image > img,
.creation__imag > source {
  max-width: 100%;
  filter: brightness(75%);
}

.see__all__btn {
  display: block;
  margin: 2rem auto 5rem;
  border: 1px solid hsl(0, 0%, 50%);
  padding: 0.8em 2em;
  background: transparent;
  cursor: pointer;
}

.site__footer {
  padding: 3em 1.5em;
  background-color: hsl(0, 0%, 0%);
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.site__footer__nav {
  flex: 1 0 100%;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.site__footer__logo {
  flex: 1 0 100%;
  max-width: 160px;
  margin-bottom: 2em;
}

.site__footer__nav__link {
  flex: 1 0 100%;
  text-align: center;
  text-decoration: none;
}

.site__footer__nav__link + .site__footer__nav__link {
  margin-top: 1em;
}

.socials__and__copyright {
  flex: 1 0 100%;
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  margin-top: 3rem;
}

.socials {
  flex: 0 0 100%;
  max-width: 100%;
  display: flex;
  justify-content: center;
  margin-bottom: 1rem;
}

.socials__icon + .socials__icon {
  margin-left: 1rem;
}

.copyright {
  color: hsl(0, 0%, 49%);
  margin-bottom: 1rem;
}

.attribution {
  color: #fff;
  font-size: 11px;
  text-align: center;
}

.attribution > a {
  color: hsl(210, 100%, 56%);
}

@media screen and (min-width: 760px) {
  .site__header {
    padding: 3rem 10rem;
    flex-wrap: nowrap;
    flex-direction: row;
    justify-content: space-between;
  }

  .site__logo__container {
    flex: 0 0 40%;
    max-width: 40%;
  }

  .site__logo {
    flex: 1 0 100%;
  }

  .site__nav--toggle {
    display: none;
  }

  .site__nav {
    flex: 1 0 60%;
    max-width: 60%;
    display: flex;
  }

  .site__nav > ul {
    flex: 1 0 100%;
    display: flex;
    justify-content: flex-end;
  }

  .site__nav__item + .site__nav__item {
    margin-top: 0;
    margin-left: 2rem;
  }

  .site__nav__link {
    text-transform: capitalize;
    font-size: 1em;
  }

  .hero {
    background-image: url("./images/desktop/image-hero.jpg");
    justify-content: flex-start;
    padding: 3rem 10rem 0;
  }

  .hero__caption {
    max-width: 320px;
    font-size: 2.5em;
  }

  .interactive__vr {
    display: flex;
    justify-content: center;
    padding: 5rem;
  }

  .interactive__vr__img {
    flex: 0 0 55%;
    max-width: 55%;
  }

  .interactive__vr__body {
    flex: 0 0 45%;
    max-width: 45%;
    margin: 10rem 0 0 -10rem;
    padding: 6em 6em 0;
    background-color: hsl(0, 0%, 100%);
  }

  .interactive__vr__heading {
    text-align: left;
  }

  .interactive__vr__text {
    text-align: left;
  }

  .creations {
    padding: 0 10rem 10rem;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
  }

  .creations__heading {
    flex: 1 0 auto;
    max-width: 50%;
    order: 0;
  }

  .creations__grid {
    flex: 1 0 100%;
    max-width: 1072px;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    max-width: 1072px;
    order: 2;
  }

  .creation {
    margin: 0;
  }

  .creation + .creation {
    margin-top: 0;
  }

  .creation:nth-child(n + 5) {
    margin-top: 1em;
  }

  .see__all__btn {
    flex: 0 0 100%;
    max-width: max-content;
    order: 1;
  }

  .site__footer {
    padding-left: 10rem;
    padding-right: 10rem;
    justify-content: space-between;
    align-items: flex-start;
  }

  .site__footer__logo {
    margin-bottom: 1.5rem;
  }

  .site__footer__nav {
    flex: 1 0 50%;
    max-width: 50%;
    justify-content: flex-start;
    align-items: flex-start;
  }

  .site__footer__nav > nav {
    flex: 1 0 100%;
    max-width: 100%;
  }

  .site__footer__nav__link {
    flex: 0 0 0;
  }

  .site__footer__nav__link + .site__footer__nav__link {
    padding-left: 1.5em;
  }

  .socials__and__copyright {
    flex: 1 0 50%;
    max-width: 50%;
    justify-content: flex-end;
    margin-top: 0;
  }

  .socials {
    justify-content: flex-end;
    margin-bottom: 1.5rem;
  }

  .attribution {
    flex: 1 0 100%;
    max-width: 100%;
    margin-top: 2em;
  }
}

